Devtools panels produce white flash when first opened in dark mode
Categories
(Core :: CSS Parsing and Computation, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr115 | --- | unaffected |
| firefox120 | --- | wontfix |
| firefox121 | --- | wontfix |
| firefox122 | --- | verified |
| firefox123 | --- | verified |
People
(Reporter: ke5trel, Assigned: emilio)
References
(Regression)
Details
(Keywords: regression)
Attachments
(2 files)
STR:
- Enable the Dark theme.
- Open devtools (Ctrl+Shift+I).
- Click on each devtools tab.
Sometimes the first load of the panel content produces a white flash.
Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=caabab6fd2b88b34f1344af40c555fed0a039949&tochange=bf9ed368ad2f3faedb517c3352f431b9f7fdfb52
Regressed by Bug 1851906.
Comment 1•2 years ago
|
||
:emilio, since you are the author of the regressor, bug 1851906, could you take a look? Also, could you set the severity field?
For more information, please visit BugBot documentation.
| Assignee | ||
Comment 2•2 years ago
|
||
This implements the proposed fix to
https://github.com/w3c/csswg-drafts/issues/9624, and adds a tentative
test for it.
Updated•2 years ago
|
| Assignee | ||
Updated•2 years ago
|
Comment 6•2 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/1dcc9b5526c2
https://hg.mozilla.org/mozilla-central/rev/e85c84028c44
Comment 8•2 years ago
|
||
The patch landed in nightly and beta is affected.
:emilio, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval. Also, don't forget to request an uplift for the patches in the regression caused by this fix.
- If no, please set
status-firefox121towontfix.
For more information, please visit BugBot documentation.
| Assignee | ||
Comment 9•2 years ago
|
||
I'd rather let this ride the trains since it is a lot riskier and affects content.
Updated•2 years ago
|
Reproducible on Firefox 121.0 on Windows 10.
Verified as fixed on Firefox 122.0b3 and Nightly 123.0a1 on Windows 10, Ubuntu 22, macOS 12.
Description
•