Bug 1866738 - Make initial about:blank docs always transparent, even in content docshells. r=jwatt

This implements the proposed fix to
https://github.com/w3c/csswg-drafts/issues/9624, and adds a tentative
test for it.

Differential Revision: https://phabricator.services.mozilla.com/D194751